[gd_scene load_steps=20 format=3 uid="uid://ccua3m5urvcrm"]

[ext_resource type="Texture2D" uid="uid://dx3im452arqlw" path="res://assets/screens/questionsscreen/background.png" id="1_g3e5r"]
[ext_resource type="Script" path="res://scripts/questions_screen.gd" id="1_r2mss"]
[ext_resource type="VideoStream" path="res://assets/Background.ogv" id="2_ci4l8"]
[ext_resource type="PackedScene" uid="uid://ykfi24r6o3m3" path="res://assets/gcp_overlay/gcp_overlay.tscn" id="2_mtuyq"]
[ext_resource type="Texture2D" uid="uid://dgpqtls5hdacq" path="res://dialogues/portraits/gemini.png" id="2_wptdb"]
[ext_resource type="PackedScene" uid="uid://daatymj755m4a" path="res://assets/random_squares.tscn" id="3_rjtc6"]
[ext_resource type="Texture2D" uid="uid://djvy8jy8moa67" path="res://assets/screens/questionsscreen/colored_borders_v2.png" id="4_ukhml"]
[ext_resource type="Texture2D" uid="uid://mauplyf7caiq" path="res://assets/screens/questionsscreen/blue-boders.png" id="6_3tofy"]

[sub_resource type="SystemFont" id="SystemFont_ketkh"]
font_names = PackedStringArray("Google Sans")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_3oxa5"]
font_names = PackedStringArray("Google Sans")
font_weight = 900
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wk7n7"]
bg_color = Color(0, 0, 0, 0.683)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.496382, 0.506594, 0.520472, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 20.0
expand_margin_top = 20.0
expand_margin_right = 20.0
expand_margin_bottom = 20.0
shadow_color = Color(0, 0, 0, 0.804)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yha62"]
content_margin_left = 24.0
content_margin_top = 24.0
content_margin_right = 24.0
content_margin_bottom = 24.0
texture = ExtResource("4_ukhml")
expand_margin_left = 3.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2ggw3"]
content_margin_left = 24.0
content_margin_top = 24.0
content_margin_right = 24.0
content_margin_bottom = 24.0
texture = ExtResource("6_3tofy")

[sub_resource type="Theme" id="Theme_1dd5c"]
Button/colors/font_color = Color(0.258824, 0.521569, 0.956863, 1)
Button/font_sizes/font_size = 32
Button/fonts/font = SubResource("SystemFont_3oxa5")
Button/styles/disabled = SubResource("StyleBoxFlat_wk7n7")
Button/styles/focus = SubResource("StyleBoxTexture_yha62")
Button/styles/hover = SubResource("StyleBoxTexture_yha62")
Button/styles/normal = SubResource("StyleBoxTexture_2ggw3")
Button/styles/pressed = null

[sub_resource type="SystemFont" id="SystemFont_xtt10"]
font_names = PackedStringArray("Google Sans Display")
font_weight = 900
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fkey6"]
bg_color = Color(0, 0, 0, 0.764)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(1, 1, 1, 0.629)
shadow_size = 11

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xond7"]
bg_color = Color(0, 0, 0, 0.764)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13
expand_margin_left = 100.0
expand_margin_top = 25.0
expand_margin_right = 100.0
expand_margin_bottom = 25.0
shadow_color = Color(1, 1, 1, 0.629)
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8x2s4"]
bg_color = Color(0, 0, 0, 0.764)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(1, 1, 1, 0.629)
shadow_size = 11

[sub_resource type="Theme" id="Theme_j05d4"]
Button/font_sizes/font_size = 32
Button/fonts/font = SubResource("SystemFont_xtt10")
Button/styles/disabled = SubResource("StyleBoxFlat_fkey6")
Button/styles/normal = SubResource("StyleBoxFlat_xond7")
Button/styles/pressed = SubResource("StyleBoxFlat_8x2s4")

[node name="QuestionsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r2mss")

[node name="gcp_overlay" parent="." instance=ExtResource("2_mtuyq")]

[node name="Background" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_g3e5r")

[node name="RandomSquares" parent="." instance=ExtResource("3_rjtc6")]
visible = false

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuestionHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="GeminiLogo" type="TextureRect" parent="MarginContainer/VBoxContainer/QuestionHBox"]
visible = false
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_wptdb")
expand_mode = 2

[node name="Question" type="Label" parent="MarginContainer/VBoxContainer/QuestionHBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.83, 0.83, 0.83, 0.669)
theme_override_colors/font_outline_color = Color(0.818, 0.818, 0.818, 0.658)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 13
theme_override_fonts/font = SubResource("SystemFont_ketkh")
theme_override_font_sizes/font_size = 54
text = "âœ¦ HOW MUCH OF A GAMER ARE YOU?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnswersHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Answer1" type="Button" parent="MarginContainer/VBoxContainer/AnswersHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(290, 290)
layout_mode = 2
theme = SubResource("Theme_1dd5c")
text = "BRING IT ON, 
LOVE HARD 
GAMES"
autowrap_mode = 2

[node name="Answer2" type="Button" parent="MarginContainer/VBoxContainer/AnswersHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(290, 290)
layout_mode = 2
theme = SubResource("Theme_1dd5c")
text = "MODERATELY 
INTO GAMES"
autowrap_mode = 2

[node name="Answer3" type="Button" parent="MarginContainer/VBoxContainer/AnswersHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(290, 290)
layout_mode = 2
theme = SubResource("Theme_1dd5c")
text = "ENJOY THE RIDE"
autowrap_mode = 2

[node name="Answer4" type="Button" parent="MarginContainer/VBoxContainer/AnswersHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(290, 290)
layout_mode = 2
theme = SubResource("Theme_1dd5c")
text = "I'M A NOOB"
autowrap_mode = 2

[node name="AnswersHBox2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 80
alignment = 1

[node name="Answer5" type="Button" parent="MarginContainer/VBoxContainer/AnswersHBox2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 32)
layout_mode = 2
theme = SubResource("Theme_j05d4")
text = "JUST SURPRISE ME"

[node name="BackgroundVideo" type="VideoStreamPlayer" parent="."]
z_index = -1
clip_contents = true
layout_mode = 2
offset_left = -4.0
offset_top = -2.0
offset_right = 3836.0
offset_bottom = 2158.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
stream = ExtResource("2_ci4l8")
autoplay = true
loop = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/AnswersHBox2/Answer5" to="." method="_on_answer5_pressed"]
